@@ -12,12 +12,13 @@ plugins {
 
     // Apply the application plugin to add support for building an application
     id 'application'
-
+    
     id 'org.openjfx.javafxplugin' version '0.0.7'
     // 
     id 'checkstyle'
+    
 }
-
+applicationDefaultJvmArgs = ['--add-opens', 'java.base/java.lang=ALL-UNNAMED']
 repositories {
     // Use jcenter for resolving your dependencies.
     // You can declare any Maven/Ivy/file repository here.
